Membetulkan sedikit kesalahan

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,6 +4,8 @@
 <p>{{ name }}</p>
 <h3>NPM: </h3>
 <p>{{ npm }}</p>
+<h3>Kelas: </h3>
+<p>{{ class }}</p>
 
 <a href="{% url 'main:create_products' %}">
   <button>+ Add Products</button>
