Menyelesaikan Tugas Individu 4 PBP: Implementasi Autentikasi, Session, dan Cookies pada Django

--- a/main/templates/products_detail.html
+++ b/main/templates/products_detail.html
@@ -30,4 +30,10 @@
   {% endif %}
 </p>
 
+{% if product.user %}
+    <p>Penjual: {{ product.user.username }}</p>
+{% else %}
+    <p>Penjual: Anonymous</p>
+{% endif %}
+
 {% endblock content %}
