--- a/main/templates/card.html
+++ b/main/templates/card.html
@@ -95,14 +95,14 @@
 
         {% if user.is_authenticated and product.user == user %}
         <div class="flex gap-2">
-          <a href="{% url 'main:edit_product' product.pk %}"
+          <button onclick="openEditModal('{{ product.pk }}')"
              class="rounded-lg bg-emerald-600 px-3 py-2 text-sm font-medium text-white hover:bg-emerald-700">
             Edit
-          </a>
-          <a href="{% url 'main:delete_product' product.pk %}"
-             class="rounded-lg bg-red-600 px-3 py-2 text-sm font-medium text-white hover:bg-red-700">
+          </button>
+          
+          <button type="button" onclick="openDeleteModal('{% url 'main:delete_product_ajax' product.pk %}')" class="rounded-lg bg-red-600 px-3 py-2 text-sm font-medium text-white hover:bg-red-700">
             Delete
-          </a>
+          </button>
         </div>
         {% endif %}
       </div>
