--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block meta %} {% endblock meta %}
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Add DOMPurify here -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
   </head>
   <body>
-    {% block content %} {% endblock content %}
+    {% block content %} 
+    {% endblock content %}
+    {% include 'toast.html' %}
+    {% include 'modal.html' %}
+    {% include 'delete_modal.html' %}
+    <script>
+      {% if messages %}
+        {% for message in messages %}
+          showToast('{{ message.tags|capfirst }}', '{{ message }}', '{{ message.tags }}');
+        {% endfor %}
+      {% endif %}
+    </script>
   </body>
 </html>
